# Auriumchain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  LICENSE  README.md  SECURITY.md  deploy_vps.sh
docs/: deployment-vps-guide.md  installation.md  quantum-integration.md  quantum-max-security.md  quantum-security.md  rocksdb-migration.md  security-audit.md  security-improvements.md  wallet-management.md
src/: lib.rs  main.rs
src/blockchain/: block.rs  chain.rs  chain.rs.backup  fees.rs  genesis.rs  mod.rs  quantum_transaction.rs  transaction.rs  transaction.rs.old  utxo.rs
src/mining/: energy.rs  miner.rs  mod.rs  pow.rs
src/network/: mod.rs  p2p.rs  peer.rs
src/p2p/: messages.rs  mod.rs  peer_manager.rs  security.rs  server.rs  sync.rs  sync.rs.old
src/rpc/: mod.rs  serve  server.rs
src/security/: mod.rs  monitor.rs  protection.rs  rate_limiter.rs  security_logger.rs  signature_validator.rs  validator.rs
src/storage/: db.rs  mod.rs
src/utils/: config.rs  crypto.rs  mod.rs  quantum_hash.rs
src/wallet/: address.rs  keys.rs  mod.rs  quantum_max.rs  quantum_resistant.rs  secure_wallet.rs
tests/: test_security_attacks.rs
