[package]
name = "auriumchain"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
bs58 = "0.5"
chrono = "0.4"
secp256k1 = { version = "0.29", features = ["rand"] }
rand = "0.8"
axum = "0.7"
tower = "0.5"
log = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.0"
zeroize = "1.7"
sha3 = "0.10"
rpassword = "7.3"
anyhow = "1.0"
bincode = "1.3"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "auriumchain"
path = "src/main.rs"

[[bin]]
name = "auriumchain-wallet"
path = "src/bin/wallet.rs"

[[bin]]
name = "auriumchain-secure-wallet"
path = "src/bin/secure_wallet.rs"
