[package]
name = "auriumchain"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "auriumchain"
path = "src/main.rs"

[[bin]]
name = "auriumchain-wallet"
path = "src/bin/wallet.rs"

[[bin]]
name = "auriumchain-migrate"
path = "src/bin/migrate_to_rocksdb.rs"

[[bin]]
name = "auriumchain-keygen"
path = "src/bin/generate_wallet.rs"

[[bin]]
name = "auriumchain-quantum-keygen"
path = "src/bin/quantum_wallet_gen.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["rand-std"] }
aes-gcm = "0.10"
argon2 = "0.5"
blake2 = "0.10"
blake3 = "1.5"
sha3 = "0.10"
bincode = "1.3"
anyhow = "1.0"
futures = "0.3"
tokio-util = "0.7"
env_logger = "0.10"
rand = "0.8"
log = "0.4"
bip39 = "2.0"
zeroize = "1.7"
bs58 = "0.5"
rpassword = "7.0"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
rcgen = "0.11"
reqwest = { version = "0.11", features = ["json"] }
rocksdb = "0.22"
num_cpus = "1.16"

# Post-Quantum Cryptography (NIST standards)
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.5"
pqcrypto-traits = "0.3"

[dev-dependencies]
tempfile = "3.8"
